implemented a minimal async copy mechanism

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,8 @@ name = "copy-service"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-daemonize = "0.5.0"
 serde = { version = "1", features = ["derive"] }
+tokio = { version = "1", features = ["full"] }
+daemonize = "0.5.0"
 toml = "0.8.8"
