--- a/Config.toml
+++ b/Config.toml
@@ -2,3 +2,4 @@ pid_file = "/tmp/csd.pid"
 working_directory = "./daemon"
 stdout_file = "./daemon/daemon.out"
 stderr_file = "./daemon/daemon.err"
+buffer_size = 4096
