spawn a thread for each copy job

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 serde = { version = "1", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 daemonize = "0.5.0"
+anyhow = "1.0.75"
 toml = "0.8.8"
