--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 serde = { version = "1", features = ["derive"] }
+serde_json = "1.0"
 std-semaphore = "0.1.0"
 daemonize = "0.5.0"
 anyhow = "1.0.75"
