--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,15 @@ edition = "2021"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
 std-semaphore = "0.1.0"
+threadpool = "1.8.1"
 daemonize = "0.5.0"
 anyhow = "1.0.75"
 toml = "0.8.8"
+
+[dependencies.uuid]
+version = "1.6.1"
+features = [
+    "v4",                
+    "fast-rng",          
+    "macro-diagnostics",
+]
